--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -34,6 +34,13 @@
     padding-right: 5px;
 }
 
+.create-link {
+    text-decoration: none;
+    padding-right: 15px;
+    font-size: larger;
+    color: #a186d3;
+}
+
 .fa-bars {
     padding-right: 10px;
     padding-left: 5px;
