--- a/frontend/src/components/CurrentSpots/CurrentSpots.css
+++ b/frontend/src/components/CurrentSpots/CurrentSpots.css
@@ -1,19 +1,27 @@
-.section {
+.manage-spots-section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-}
-
-/* .manage-spots-container {
-    display: flex;
-    flex-direction: column;
-    padding-left: 50px;
+    align-items: start;
 }
 
 .manage-title {
+    margin: 10px 0px;
+}
+
+.create-new-spot-button, .update-spot-button {
+    padding: 5px 10px;
+    border: 1px solid black;
+    box-shadow: 3px 3px 2px black;
+    background-color: #BCAFD4;
+    color: white;
+    cursor: pointer;
+}
+
+.manage-buttons {
     display: flex;
-    justify-content: flex-start;
-} */
+    flex-direction: row;
+    gap: 10px;
+}
 
 .spots-container {
     display: flex;
@@ -32,8 +40,8 @@
 
 .spot-image {
     object-fit: cover;
-    width: 260px;
-    height: 260px;
+    width: 300px;
+    height: 300px;
     border-radius: 5%;
 }
 
@@ -50,7 +58,7 @@
     flex-direction: column;
 }
 
-.spot-price {
+.spot-prices {
     margin: 0px;
     padding-top: 5px;
 }
