--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,9 +1,19 @@
+body {
+    padding-top: 70px;
+}
+
 .header-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px 10px 10px;
+    padding: 5px 10px;
     border-bottom: 1px solid lightgray;
+    background-color: white;
+    z-index: 1;
 }
 
 .home-link {
@@ -50,6 +60,7 @@
 .profile-button {
     border-radius: 30px;
     border-width: thin;
+    border: 1px solid black;
     padding: 8px 10px;
     font-size: 20px;
     background-color: white;
@@ -60,9 +71,9 @@
 
 .profile-dropdown {
     position: absolute;
-    right: 23px;
+    right: 15px;
     background-color: white;
-    padding: 0px 18px;
+    padding: 5px 10px 5px 10px;
     border: 1px solid black;
 }
 
@@ -70,7 +81,7 @@
     display: flex;
     flex-direction: column;
     cursor: pointer;
-    padding: 2px 0px;
+    padding: 2px 5px;
 }
 
 .user-menu {
@@ -96,11 +107,12 @@
     padding: 5px 30px;
 }
 
-.manage-spots-link {
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    color: black;
+.manage-spots-button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
 }
 
 .user-menu-logout {
@@ -112,8 +124,10 @@
 .logout-button {
     border-radius: 30px;
     padding: 5px 12px;
+    border: 1px solid black;
     background-color: #BCAFD4;
     color: white;
+    cursor: pointer;
 }
 
 .hidden {
