--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,19 +1,59 @@
+.login-form {
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
 .login-header {
     display: flex;
     justify-content: center;
+    margin: 0px;
+    padding-bottom: 10px;
 }
 
 .login-form-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-.label {
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
+.input-text-box {
+    width: 300px;
 }
 
-/* .login-button {
-    padding-top: 5px;
-} */
+.login-button-div {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.login-button {
+    width: 308px;
+    padding: 8px;
+    box-shadow: 3px 3px 2px black;
+    background-color: #BCAFD4;
+    color: white;
+    cursor: pointer;
+    border: 1px solid black;
+}
+
+.login-button:disabled {
+    background-color: white;
+    color: grey;
+    border: 1px solid grey;
+    box-shadow: 3px 3px 2px grey;
+}
+
+.demo-user-login {
+    background: none;
+    border: none;
+    padding-bottom: 10px;
+    text-decoration: underline;
+    color: #9a7cd1;
+    cursor: pointer;
+}
+
+.error-message {
+    color: red;
+    margin: 0px;
+    padding-bottom: 5px;
+}
