--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 2;
   }
 
   #modal-background {
@@ -21,6 +22,10 @@
   #modal-content {
     position: absolute;
     background-color: white;
+    border: 1px solid black;
     border-radius: 10px;
-    padding: 50px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
