--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -105,6 +105,8 @@ body {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     padding: 5px 30px;
+    display: flex;
+    justify-content: center;
 }
 
 .manage-spots-button {
