--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -75,6 +75,7 @@ body {
     background-color: white;
     padding: 5px 10px 5px 10px;
     border: 1px solid black;
+    border-radius: 3px;
 }
 
 .menu-item {
